homework-2.3/manifests/deployment-task2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: https-app
  labels:
    app: https-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: https-app
  template:
    metadata:
      labels:
        app: https-app
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
          name: http

---
apiVersion: v1
kind: Service
metadata:
  name: https-app-service
  labels:
    app: https-app
spec:
  selector:
    app: https-app
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  type: ClusterIP
