homework-2.3/manifests/ingress-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homework-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.allow-http: "false"
spec:
  tls:
  - hosts:
    - homework.example.com
    secretName: homework-tls
  rules:
  - host: homework.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: https-app-service
            port:
              number: 80
